--- a/frontend/matches/styles.css
+++ b/frontend/matches/styles.css
@@ -1,11 +1,20 @@
-
-main{
+main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
     height: 92vh;
 
+}
+
+::-webkit-scrollbar {
+    background-color: transparent;
+    height: 1rem
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #CFD7C7;
+    border-radius: 10px;
 }
 
 .content {
@@ -17,7 +26,8 @@ main{
     gap: 2vh;
     border: 1px solid black;
 }
-.content a{
+
+.content a {
     width: fit-content;
     text-decoration: none;
     color: var(--primary-text);
@@ -25,16 +35,17 @@ main{
     padding: 1vh 1.5vw;
     border-radius: 5px;
 }
+
 .content h1 {
     color: var(--primary-text);
     font-size: 2rem;
-    font-weight: 500; 
+    font-weight: 500;
 }
 
 .content h3 {
     color: var(--primary-text);
     font-size: 1.5rem;
-    font-weight: 500;    
+    font-weight: 500;
 }
 
 .profile-list {
@@ -44,7 +55,9 @@ main{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     gap: 1vw;
+    padding: 1vh;
 }
+
 .profile-list .profiles {
     height: 100%;
     width: 10vw;
