--- a/frontend/profile/styles.css
+++ b/frontend/profile/styles.css
@@ -1,3 +1,103 @@
+:root {
+    --primary: #F6F1D1;
+    --secondary: #CFD7C7;
+    --primary-text: #0B2027;
+    --secondary-text: #40798C;
+    --marked: #70A9A1;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 92vh;
+
+}
+
+.content {
+    width: 80vw;
+    padding: 2vh 2vw;
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
+
+.content a {
+    width: fit-content;
+    text-decoration: none;
+    color: var(--primary-text);
+    background-color: var(--secondary);
+    padding: 1vh 1.5vw;
+    border-radius: 5px;
+}
+
+.content #profile {
+    width: 100%; 
+}
+
+.content #profile #fixed-information {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2vw;
+    margin-bottom: 5vh;
+}
+
+.content #profile #fixed-information img {
+    height: 10rem;
+    aspect-ratio: 1/1;
+    border-radius: 2rem;
+}
+
+.content #profile #fixed-information #personal-information {
+    display: flex;
+    flex-direction: column;
+}
+#personal-information h1 {
+    font-size: 2rem;
+}
+
+#personal-information .rating {
+    display: flex;
+    flex-direction: row;
+    margin-top: 1rem;
+}
+
+.ratings {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    gap: .5rem;
+    width: 100%;
+}
+.ratings #subject {
+    padding: .5rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ratings #scale {
+    width: 60%;
+    height: 100%;
+    border-radius: 2rem;
+    background-color: var(--secondary);   
+}
+
+.ratings #scale #rating {
+    height: 100%;
+    width: 50%;
+    background-color: var(--marked);
+    border-radius: 2rem;
+}
+
+#yes {
+    width: 100%; 
+    height: 100%;
+    background-color: var(--marked);
+    border-radius: 2rem;
+}
+
 .flexbox {
     display: flex;
     flex-direction: row;
