--- a/frontend/matches/styles.css
+++ b/frontend/matches/styles.css
@@ -20,11 +20,9 @@ main {
 .content {
     width: 80vw;
     padding: 2vh 2vw;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
     gap: 2vh;
-    border: 1px solid black;
 }
 
 .content a {
@@ -34,6 +32,8 @@ main {
     background-color: var(--secondary);
     padding: 1vh 1.5vw;
     border-radius: 5px;
+    border: none;
+    cursor: pointer;
 }
 
 .content h1 {
@@ -61,7 +61,38 @@ main {
 .profile-list .profiles {
     height: 100%;
     width: 10vw;
+    padding: 3%;
     border: 1px solid black;
     display: flex;
     border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.profile-picture {
+    height: 60%;
+    aspect-ratio: 1/1;
+    border-radius: 10px;
+    border: 1px solid black;
+
+    background-image: url("https://images.unsplash.com/photo-1585575747263-04500e137c94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.profiles .name {
+    height: fit-content;
+    width: 80%;
+    text-align: center;
+}
+
+.profiles .rating {
+    height: fit-content;
+    width: 80%;
+    text-align: center;
 }
